--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "next": "^15.0.3",
     "next-i18next": "^15.3.1",
     "nextjs-progressbar": "^0.0.16",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "^19.0.0-rc-66855b96-20241106",
+   "react": "^18.2.0",
+  "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
     "remark-gfm": "^4.0.0"
   },
